# agentbench

./: .gitignore  LICENSE  README.md  pyproject.toml
agentbench/: __init__.py  runner.py  suite.py
agentbench/adapter/: __init__.py  base.py  function_adapter.py  subprocess_adapter.py
agentbench/cli/: __init__.py  main.py
agentbench/report/: __init__.py  console_report.py  html_report.py
agentbench/scoring/: __init__.py  base.py  exact_match.py  llm_judge.py
agentbench/tasks/: __init__.py  base.py  coding.py  math.py  reasoning.py  registry.py  tool_use.py
examples/: custom_tasks.json  run_benchmark.py  with_llm_judge.py
tests/: test_runner.py  test_scoring.py  test_suite.py  test_tasks.py
