[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentbench"
version = "0.1.0"
description = "A framework for benchmarking and evaluating AI agents with comprehensive test suites"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "AgentBench Contributors" },
]
keywords = ["ai", "agent", "benchmark", "evaluation", "testing", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
all = ["agentbench[claude,openai]"]

[project.urls]
homepage = "https://github.com/zzy133131/agentbench"
repository = "https://github.com/zzy133131/agentbench"

[project.scripts]
agentbench = "agentbench.cli.main:app"

[tool.setuptools.packages.find]
include = ["agentbench", "agentbench.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
